Some writing updates

--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Brendan Dolan-Gavitt at 2015-11-05 12:05:37 -0500 
+%% Created for Brendan Dolan-Gavitt at 2015-11-10 18:24:49 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{newsometaint,
+	Author = {James Newsome and Dawn Song},
+	Booktitle = {Network and Distributed Systems Symposium (NDSS)},
+	Date-Added = {2015-11-10 22:42:52 +0000},
+	Date-Modified = {2015-11-10 22:42:52 +0000},
+	Title = {Dynamic Taint Analysis for Automatic Detection, Analysis, and Signature Generation of Exploits on Commodity Software},
+	Year = {2005}}
 
 @inproceedings{Shiraishi:2014,
 	Acmid = {2706360},
@@ -43,19 +51,17 @@
 	Author = {Chipounov, Vitaly and Kuznetsov, Volodymyr and Candea, George},
 	Booktitle = {Architectural Support for Programming Languages and Operating Systems},
 	Date-Added = {2015-10-08 18:51:06 +0000},
-	Date-Modified = {2015-10-08 18:53:00 +0000},
-	Title = {S2E: A Platform for In-Vivo Multi-Path Analysis of Software Systems},
+	Date-Modified = {2015-11-10 23:24:47 +0000},
+	Title = {{S2E}: A Platform for In-Vivo Multi-Path Analysis of Software Systems},
 	Year = {2011}}
 
-@techreport{PANDA,
+@inproceedings{PANDA,
 	Author = {Dolan-Gavitt, Brendan and Hodosh, Joshua and Hulin, Patrick and Leek, Timothy and Whelan, Ryan},
+	Booktitle = {Workshop on Program Protection and Reverse Engineering ({PPREW})},
 	Date-Added = {2015-10-08 17:56:44 +0000},
-	Date-Modified = {2015-10-08 17:59:35 +0000},
-	Institution = {Columbia University},
-	Number = {23},
-	Title = {Repeatable Reverse Engineering for the Greater Good with PANDA},
-	Type = {CUCS},
-	Year = {2014}}
+	Date-Modified = {2015-11-10 23:00:58 +0000},
+	Title = {Repeatable Reverse Engineering for the Greater Good with {PANDA}},
+	Year = {2015}}
 
 @techreport{Juliet:2012,
 	Author = {{Center for Assured Software}},
@@ -122,8 +128,8 @@
 	Author = {Shan Lu and Zhenmin Li and Feng Qin and Lin Tan and Pin Zhou and Yuanyuan Zhou},
 	Booktitle = {Workshop on the Evaluation of Software Defect Detection Tools},
 	Date-Added = {2015-09-21 21:31:24 +0000},
-	Date-Modified = {2015-09-21 21:31:55 +0000},
-	Title = {BugBench: A Benchmark for Evaluating Bug Detection Tools},
+	Date-Modified = {2015-11-10 22:58:33 +0000},
+	Title = {{BugBench}: A Benchmark for Evaluating Bug Detection Tools},
 	Year = {2005}}
 
 @inproceedings{Zhivich:2005,
@@ -205,7 +211,8 @@
 @inproceedings{Wang:2010,
 	Author = {Tielei Wang and Tao Wei and Guofei Gu and Wei Zou},
 	Booktitle = {IEEE Symposium on Security and Privacy},
-	Title = {TaintScope: A Checksum-Aware Directed Fuzzing Tool for Automatic Software Vulnerability Detection},
+	Date-Modified = {2015-11-10 22:58:42 +0000},
+	Title = {{TaintScope}: A Checksum-Aware Directed Fuzzing Tool for Automatic Software Vulnerability Detection},
 	Year = {2010}}
 
 @inproceedings{Haller:2013,
@@ -218,9 +225,10 @@
 @inproceedings{Cadar:2008,
 	Author = {Cadar, Cristian and Dunbar, Daniel and Engler, Dawson},
 	Booktitle = {Proceedings of the 8th USENIX Conference on Operating Systems Design and Implementation},
+	Date-Modified = {2015-11-10 22:59:26 +0000},
 	Publisher = {USENIX Association},
 	Series = {OSDI'08},
-	Title = {KLEE: Unassisted and Automatic Generation of High-coverage Tests for Complex Systems Programs},
+	Title = {{KLEE}: Unassisted and Automatic Generation of High-coverage Tests for Complex Systems Programs},
 	Year = {2008}}
 
 @inproceedings{Yamaguchi:2014,
