--- a/paper1/overview.tex
+++ b/paper1/overview.tex
@@ -1,5 +1,5 @@
 
-At a high level, LAVA adds bugs to programs in the following manner. For some specific input, we:
+At a high level, LAVA adds bugs to programs in the following manner. Given an execution trace of the program on some specific input, we:
 
 \begin {enumerate}
 \item Identify execution trace locations where input bytes are available that do not determine control flow and have not been modified much. 
@@ -23,10 +23,9 @@ The pointers \texttt{s} and \texttt{d}, and the buffers pointed to by them are u
 
 \subsection {The DUA}
 
-In a little more detail, the first step, in which DUAs are identified, is accomplished as follows.  
+Because they ensure that attacker-controlled data is available to influence program behavior, DUAs form the raw material from which we construct bugs. To identify DUAs in program, we perform the following actions.
 
-The program is executed under a dynamic taint analysis for a specific input.
-\todo[inline]{Ricky: this is the first place we mention taint.  should we define our approach to taint analysis, maybe cite the papers that introduce the taint concepts we employ in LAVA?}
+The program is executed under a dynamic taint analysis~\cite{newsometaint} for a specific input.
 That taint analysis has a few important features.
 
 \begin{itemize}
@@ -59,11 +58,11 @@ TCN simply tracks the depth of the tree of computation required to obtain a quan
 The smaller TCN is for a program quantity, the closer it is, computationally, to the input.
 If TCN is 0, the quantity is a direct copy of input bytes.
 The intuition behind this measure is that we need DUAs that are computationally close to the input in order to be able to use them with predictable results.
+
 Note that TCN is not an ideal measure.
 There are obviously situations in which the tree of computation is deep but the resulting value is both completely predictable and has as much entropy as the original value.
 However, TCN has the advantage that it is easy to compute on an instruction-by-instruction basis.
-Whenever the taint system needs to union sets of taint labels to represent computation, the TCN associated with the resulting set is one more than the max of those of the 
-input sets.
+Whenever the taint system needs to compute the union of sets of taint labels to represent computation, the TCN associated with the resulting set is one more than the max of those of the input sets.
 In the running example, and illustrated in Figure~\ref{fig:taint-compute-number}, $TCN(c)=1$ after line 1, since it is computed from quantities \verb+a+ and \verb+b+ which are directly derived from input.
 Later, just before line 7 and after the loop, $TCN(c)=n+1$ because each iteration of the loop increases the depth of the tree of computation by one.  
 
@@ -73,7 +72,7 @@ Thus, if a particular input byte label was never found in a taint label set asso
 A DUA entirely consisting of bytes with 0 or very low liveness can be considered \emph{dead} in the sense that it can have little influence upon control flow for this program trace.
 If one were to fuzz dead input bytes, the program should be indifferent and execute the same trace.  
 In the running example, $LIV(0..3)=1$ after line 3, since \verb+a+ is a direct copy of input bytes 0..3.
-After each iteration of the loop, the liveness of bytes 8..11, the loop bound, increase by one and so, after the loop, $LIV(8..11)=n$.
+After each iteration of the loop, the liveness of bytes 8..11, the loop bound, increase by one, and so after the loop $LIV(8..11)=n$.
 
 The combination of uncomplicated (low TCN) and dead (low liveness) program data is a powerful one for vulnerability injection.
 The DUAs it identifies are internal program quantities that are often a direct copy of input bytes, and can be set to any chosen value without sending the program along a different path.  
@@ -95,7 +94,7 @@ Obviously, this means that the attack point must be \emph{temporally after} an a
 If the goal is to inject a read overflow, then reads via pointer dereference, array index, and bulk memory copy, e.g., are reasonable attack points.  
 If the goal is to inject divide-by-zero, then arithmetic operations involving division will be attacked. 
 Alternately, the goal might be to control one or more arguments to a library function.
-For instance, in the running example, on line 7, the call to \verb+memcpy+ can be attacked since it is observed in the trace after a useable DUA, the argument \verb+b+, and any of its arguments can be controlled by adding \verb+b+, thus potentially triggering a buffer overflow. 
+For instance, in the running example, on line 7, the call to \verb+memcpy+ can be attacked since it is observed in the trace after a usable DUA, the argument \verb+b+, and any of its arguments can be controlled by adding \verb+b+, thus potentially triggering a buffer overflow. 
 
 \subsection {Data-flow bug injection}
 
@@ -105,3 +104,9 @@ If it is not in scope, new code is added to siphon the DUA off into a safe place
 However, in order to ensure that the bug only manifests itself very occasionally (one of our requirements from Section~\ref{sec:motivation}), we add a guard requiring that the DUA match a specific value if it is to be used to manifest the vulnerability.
 In the running example, the DUA \verb+b+ is still in scope at the \verb+memcpy+ attack point and the only source code modification necessary is to make use of it to introduce the vulnerability if it matches a particular value.  
 If we replace the first argument to the call to \verb+memcpy+, \verb+d+, with \verb-d+(b==0x6c617661)*b- then there will be an out of bounds write only when bytes 4..7 of the input exactly match 0x6c617661. 
+
+Although this mechanism for ensuring that each bug is only triggered for one specific input has worked well for us so far, there are other ways we could accomplish the same task.
+For example, we could instead guard the call to the buggy code with an \verb+if+ statement, or perform a comparison with the input bytes that make up the DUA one by one.
+Although these are functionally equivalent, the exact mechanism used may make it easier for certain tools to find the bug.
+Comparing the input bytes one by one, for example, would allow coverage-maximizing fuzzers like American Fuzzy Lop (AFL) to incrementally discover the bug by guessing one byte at a time, rather than having to guess the entire 32-bit trigger at once.
+For a full-scale tool evaluation, it would be best to inject bugs with a variety of different trigger mechanisms; however, for our current prototype we use only the one described in this section.
