Add table for coreutils results

--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -4,6 +4,7 @@
 % \usepackage[hyphens]{url}
 \usepackage{hyperref}
 \usepackage{amsmath}
+\usepackage{multirow}
 
 %\documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
